--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,17 @@
 .slides {
-  background-color: white;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: black;
+  height: 50%;
+  width: 50%;
+}
+
+body {
+  background-color: black;
+}
+
+.mySlides.w3.animate.fading {
   height: 50%;
   width: 50%;
 }
